--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -62,6 +62,18 @@ table {
 
 /*
   ========================================
+  Custom styles
+  ========================================
+*/
+body {
+  color: #888;
+  font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+
+/*
+  ========================================
   Grid
   ========================================
 */
@@ -74,11 +86,15 @@ table {
   box-sizing: border-box;
 }
 
-.container {
+.container,
+.grid {
   width: 960px;
+  margin: 0 auto;
+}
+
+.container {
   padding-right: 30px;
   padding-left: 30px;
-  margin: 0 auto;
 }
 /*
   ========================================
@@ -109,6 +125,51 @@ h1, h3, h4, h5, p {
   margin-bottom: 22px;
 }
 
+h1, h2, h3, h4 {
+  color: #648880;
+}
+
+h1 {
+  font-size: 36px;
+  line-height: 44px;
+}
+h2 {
+  font-size: 24px;
+  line-height: 44px;
+}
+h3 {
+  font-size: 21px;
+}
+h4 {
+  font-size: 18px;
+}
+h5 {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+}
+strong {
+  font-weight: 400;
+}
+cite, em {
+  font-style: italic;
+}
+
+/*
+  ========================================
+  Links
+  ========================================
+*/
+
+a:hover {
+  color: #a9b2b9;
+}
+a {
+  color: #648880;
+}
+.tease a:hover h3 {
+  color: #a9b2b9;
+}
 /*
   ========================================
   Buttons
@@ -133,8 +194,16 @@ h1, h3, h4, h5, p {
 */
 
 .hero {
+  line-height: 44px;
   padding: 22px 80px 66px 80px;
 }
+.hero h2 {
+  font-size: 36px;
+}
+.hero p {
+  font-size: 24px;
+}
+
 
 /*
   ========================================
@@ -144,19 +213,54 @@ h1, h3, h4, h5, p {
 
 .logo {
   border-top: 4px solid #648880;
-  padding: 40px 0 22px 0;
   float: left;
+  font-size: 48px; 
+  line-height: 44px;
+  padding: 40px 0 22px 0;
 }
 
+.tagline {
+  margin: 66px 0 22px 0;
+}
+.primary-nav {
+  font-size: 14px;
+  font-weight: 400;
+}
 /*
   ========================================
   Primary footer
   ========================================
 */
 .primary-footer {
+  color: #648880;
+  font-size: 14px;
   padding-bottom: 44px;
   padding-top: 44px;
 }
 .primary-footer small {
   float: left;
+  font-weight: 400;
 }
+
+
+
+.col-1-3 {
+  width: 33.33%;
+}
+.col-2-3 {
+  width: 66.66%
+}
+
+.col-1-3,
+.col-2-3 {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
